--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/layout.css">
     <link rel="stylesheet" href="/assets/css/main.css">
+    <script src="/assets/js/common.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
@@ -103,15 +106,29 @@
         <main>
             <section class="section1">
                 <div class="inner">
-                    <h2>친환경 기술연구를<br>
-                        바탕으로 뛰어난 핵심소재 및<br>
-                        솔루션을 제공합니다.</h2>
+                    <h2>
+                        <span>친환경 기술연구를</span>
+                        <span>바탕으로 뛰어난 핵심소재 및</span>
+                        <span>솔루션을 제공합니다.</span>
+                    </h2>
                 </div>
                 <div class="bg">
-                    <video playsinline autoplay loop src="/assets/video/vdo_bg_main_intro.mp4" type="video/mp4"></video>
+                    <video src="/assets/video/vdo_bg_main_intro.mp4" type="video/mp4" autoplay loop></video>
                 </div>
             </section>
-            <section class="section2"></section>
+            <section class="section2">
+                <div class="inner">
+                    <h3>Business</h3>
+                    <p>
+                        <span>더 나은 내일을 위해</span>
+                        <span>환경을 가장 먼저</span>
+                        <span>생각합니다</span>
+                    </p>
+                </div>
+                <div class="bg">
+                    <video src="/assets/video/01_smart_infra_720p.mp4" autoplay loop></video>
+                </div>
+            </section>
             <section class="section3"></section>
             <section class="section4"></section>
             <section class="section5"></section>
