--- a/index.html
+++ b/index.html
@@ -105,12 +105,15 @@
     <div class="container">
         <main>
             <section class="section1">
+
                 <div class="inner">
                     <h2>
                         <span>친환경 기술연구를</span>
                         <span>바탕으로 뛰어난 핵심소재 및</span>
                         <span>솔루션을 제공합니다.</span>
+
                     </h2>
+                    <img src="/assets/images/img_intro_logo.png" alt="">
                 </div>
                 <div class="bg">
                     <video src="/assets/video/vdo_bg_main_intro.mp4" type="video/mp4" autoplay loop></video>
@@ -119,14 +122,92 @@
             <section class="section2">
                 <div class="inner">
                     <h3>Business</h3>
-                    <p>
+                    <div class="sc02-tit">
                         <span>더 나은 내일을 위해</span>
                         <span>환경을 가장 먼저</span>
                         <span>생각합니다</span>
-                    </p>
+                    </div>
+                    <div class="biz_contents">
+                        <span></span>
+                        <article class="biz_contents1 is_play">
+
+                            <h4 class="ttl">Smart Infra</h4>
+                            <p class="desc">70년 이상의 풍부한 경험을 기반으로 우수한 품질의 제품과
+                                스마트 솔루션 및 종합 서비스를 제공합니다.</p>
+                            <a href="/ko/business/smart-infra" class="btn secondary v2 h_l">
+                                <span>자세히보기</span>
+                                <i class="ic">
+                                    <svg>
+                                        <use href="#ic-arrow"></use>
+                                    </svg>
+                                </i>
+                            </a>
+
+                        </article>
+                        <article class="biz_contents2">
+
+                            <h4 class="ttl">Net-Zero Solution</h4>
+                            <p class="desc">탄소 중립 달성을 목표로 Net-zero 인프라 구축 및
+                                차별화된 기술을 바탕한 솔루션을 제공하겠습니다.</p>
+                            <a href="/ko/business/net-zero-solution" class="btn secondary v2 h_l">
+                                <span>자세히보기</span>
+                                <i class="ic">
+                                    <svg>
+                                        <use href="#ic-arrow"></use>
+                                    </svg>
+                                </i>
+                            </a>
+
+                        </article>
+                        <article class="biz_contents3">
+
+                            <h4 class="ttl">Sustainable Materials</h4>
+                            <p class="desc">고객의 가치 창출 및 미래 지속 가능한 성장을 위해 반도체, 차세대,
+                                바이오 분야 핵심소재 개발에 집중합니다.</p>
+                            <a href="/ko/business/sustainable-material" class="btn secondary v2 h_l">
+                                <span>자세히보기</span>
+                                <i class="ic">
+                                    <svg>
+                                        <use href="#ic-arrow"></use>
+                                    </svg>
+                                </i>
+                            </a>
+
+                        </article>
+                        <article class="biz_contents4">
+
+                            <h4 class="ttl">Green Plant</h4>
+                            <p class="desc">친환경 플랜트 EPC 솔루션을 통해 지속 가능한 미래를 창조하는
+                                차별화된 EPC 리더가 되겠습니다.</p>
+                            <a href="/ko/business/green-plant" class="btn secondary v2 h_l">
+                                <span>자세히보기</span>
+                                <i class="ic">
+                                    <svg>
+                                        <use href="#ic-arrow"></use>
+                                    </svg>
+                                </i>
+                            </a>
+
+                        </article>
+                        <ul class="pager">
+                            <li class="is_active"></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="bg">
-                    <video src="/assets/video/01_smart_infra_720p.mp4" autoplay loop></video>
+                <div class="bg" aria-hidden="true">
+                    <video class="video0 is_play" src="/assets/video/vdo_smart_infra.mp4" playsinline=""
+                        preload="metadata" autoplay="" loop="" muted=""></video>
+                    <!-- <video class="video1" src="/assets/video/01_smart_infra_720p.mp4" playsinline="" preload="metadata"
+                        autoplay="" loop="" muted=""></video>
+                    <video class="video2" src="/assets/video/02_net_zero_solution_720p.mp4" playsinline=""
+                        preload="metadata" loop="" muted=""></video>
+                    <video class="video3" src="/assets/video/03_sustainable_materials_720.mp4" playsinline=""
+                        preload="metadata" loop="" muted=""></video>
+                    <video class="video4" src="/assets/video/04_green_plant_720p.mp4" playsinline="" preload="metadata"
+                        loop="" muted=""></video> -->
                 </div>
             </section>
             <section class="section3"></section>
