--- a/index.html
+++ b/index.html
@@ -210,7 +210,21 @@
                         loop="" muted=""></video> -->
                 </div>
             </section>
-            <section class="section3"></section>
+            <section class="section3">
+                <div class="inner">
+                    <div class="pf-group">
+                        <h3 class="pf-tit">ESG
+                            Performance</h3>
+                        <div class="pf-txt">
+                            <p><span class="">(주)한화 글로벌부문</span>은 더 나은 내일,</p>
+                            <p>지속가능한 내일을 위해 누구에게나 어디에서나</p>
+                            <p>안전하고 건강한 삶을 제공합니다.</p>
+                        </div>
+                    </div>
+                    <div class="bg">
+                        <img src="/assets/images/img_bg_esg.jpeg" alt="">
+                    </div>
+            </section>
             <section class="section4"></section>
             <section class="section5"></section>
 
