--- a/index.html
+++ b/index.html
@@ -212,18 +212,73 @@
             </section>
             <section class="section3">
                 <div class="inner">
-                    <div class="pf-group">
-                        <h3 class="pf-tit">ESG
+                    <div class="hd-group">
+                        <h3 class="hd-tit">ESG<br>
                             Performance</h3>
-                        <div class="pf-txt">
-                            <p><span class="">(주)한화 글로벌부문</span>은 더 나은 내일,</p>
+                        <div class="hd-txt">
+                            <p><span class="font-hw">(주)한화 글로벌부문</span>은 더 나은 내일,</p>
                             <p>지속가능한 내일을 위해 누구에게나 어디에서나</p>
                             <p>안전하고 건강한 삶을 제공합니다.</p>
                         </div>
                     </div>
-                    <div class="bg">
-                        <img src="/assets/images/img_bg_esg.jpeg" alt="">
+                    <div class="link-group">
+                        <a href="" class="link01">
+                            <hr>
+                            <div class="link-tit">
+                                <h4>Environmental.</h4>
+                                <span class="link">
+                                    <i class="ic"><svg>
+                                            <use href="#ic-arrow"></use>
+                                        </svg></i>
+                                </span>
+                            </div>
+                            <div class="link-txt">
+                                <p class="sub-txt1">적극적인 탄소중립 실천과
+                                    친환경 기술연구를 이끌어 나갑니다.</p>
+                                <p class="sub-txt2">적극적으로 탄소중립 목표를 실천하고 친환경 기술 개발 및 투자,
+                                    환경 영향 최소화와 감축 활동 확대 등 지속가능한 지구 환경 조성을 위해 노력합니다.</p>
+                            </div>
+                        </a>
+                        <a href="" class="link02">
+                            <hr>
+                            <div class="link-tit">
+                                <h4>Social.</h4>
+                                <span class="link">
+                                    <i class="ic"><svg>
+                                            <use href="#ic-arrow"></use>
+                                        </svg></i>
+                                </span>
+                            </div>
+                            <div class="link-txt">
+                                <p class="sub-txt1">다양한 이해관계자들과 함께
+                                    더불어 사는 세상을 만들어 나갑니다.</p>
+                                <p class="sub-txt2">상생협력과 동반성장 및 협력사의 ESG를 관리 지원하고
+                                    지역사회 기여 및 소통 강화를 위해 노력합니다.</p>
+                            </div>
+                        </a>
+                        <a href="" class="link03">
+                            <hr>
+                            <div class="link-tit">
+                                <h4>Governance.</h4>
+                                <span class="link">
+                                    <i class="ic"><svg>
+                                            <use href="#ic-arrow"></use>
+                                        </svg></i>
+                                </span>
+                            </div>
+                            <div class="link-txt">
+                                <p class="sub-txt1">투명하고, 신뢰할 수 있는
+                                    지배구조 확립에 힘쓰고 있습니다.</p>
+                                <p class="sub-txt2">ESG위원회 활동을 활성화하고 지배구조 투명성 확보,
+                                    이해관계자 커뮤니케이션 확대를 위해 노력합니다.</p>
+                            </div>
+                        </a>
                     </div>
+
+                </div>
+                <div class="bg">
+                    <img src="/assets/images/img_bg_esg.jpeg" alt="">
+                </div>
             </section>
             <section class="section4"></section>
             <section class="section5"></section>
